fix exercise launch error's readability. add forced completion of the last order question step. minor front style improvement.

--- a/src/main/js/styles/index.css
+++ b/src/main/js/styles/index.css
@@ -20,6 +20,10 @@ body ul {
   color: #31708f;
 }
 
+.comp-ph-container .alert:last-child {
+  margin-bottom: 0;
+}
+
 .comp-ph-question p {
   margin-top: 10px;
   margin-bottom: 10px;
